fixed several RWD layout issues

--- a/css/queries.css
+++ b/css/queries.css
@@ -9,9 +9,12 @@
     }
 
     .sep{ width:45%;}
-    
+
     #emotion,
-    #coding{ width: 85%;}
+    #coding{ 
+        width:85%;
+        height:auto;
+    }
 
     ul li{ margin-bottom: 0.3em;}
 
@@ -21,13 +24,13 @@
 @media only screen and (max-width:480px){
    
     header{
-        width:85%;
+        width:90%;
         margin: 2rem auto 0.5rem;
     }
 
     h1{ display: block;}
     
-    main{ width:85%;}
+    main{ width:90%;}
 
     section{
         margin: 0 auto;
@@ -35,12 +38,13 @@
     }
 
     #emotion,
-    #coding{width: 100%;}
+    #coding{
+        width:100%;
+        height:auto;
+    }
 
-    ul { padding-inline-start: 20px; }
+    ul { padding-inline-start:20px; }
 
-    footer{width:75%;}
-
-    footer span{line-height: 140%;}
+    .footersep{width:75%;}
     
 }
