--- a/css/style.css
+++ b/css/style.css
@@ -115,13 +115,11 @@ span{
 
 #emotion{
     width: 65%;
-    height: auto;
     margin: 1rem auto 3rem;
 }
 
 #coding{
     width: 70%;
-    height: auto;
     margin: 3rem auto;
 }
 
@@ -129,16 +127,24 @@ span{
 footer{
     display: flex;
     justify-content: center;
+    align-items: center;
+    flex-direction: column;
     padding-bottom: 1rem;
-    width: 55%;
-    margin: 0 auto;
-    border-top: 1px solid lightsteelblue;
     margin-top:5rem;
 }
+
+.footersep{
+    width:55%;
+    height:0;
+    border-bottom: 1px solid lightsteelblue;
+    margin: 0 auto;
+}
+
 footer span{
     font-size: 0.8rem;
     font-weight: 300;
     text-align: center;
     color: rgb(205, 205, 205);
     padding: 1rem 2rem;
+    line-height: 140%;
 }
